--- a/ClientApp/src/app/inicio/inicio.component.html
+++ b/ClientApp/src/app/inicio/inicio.component.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    
+
 </head>
 <body>
 
@@ -20,29 +20,29 @@
 </header>
 
 <main>
-   <section class="services-container">
-        <h3 class="text-center fs-1 ">Servicios</h3>
-        <section class="services">
-            <article class="service">
-                <a routerLink="/habitaciones">
-                    <img src="assets/images/habitaciones.png" alt="Servicio 1">
-                </a>
-                    <h4>Habitaciones</h4>
-            </article>
-            <article class="service">
-                <a routerLink="/camas">
-                    <img src="assets/images/camas.png" alt="Servicio 2">
-                </a>
+  <section class="services-container">
+    <h3 class="text-center fs-1">Servicios</h3>
+    <section class="services">
+        <article class="service habitaciones">
+            <a routerLink="/habitaciones">
+                <div class="service-image"></div>
+                <h4>Habitaciones</h4>
+            </a>
+        </article>
+        <article class="service camas">
+            <a routerLink="/camas">
+                <div class="service-image"></div>
                 <h4>Camas</h4>
-            </article>
-            <article class="service">
-                <a routerLink="/pacientes">
-                <img src="assets/images/pacientes.png" alt="Servicio 3">
-                </a>
+            </a>
+        </article>
+        <article class="service pacientes">
+            <a routerLink="/pacientes">
+                <div class="service-image"></div>
                 <h4>Pacientes</h4>
-            </article>
-        </section>
-   </section>
+            </a>
+        </article>
+    </section>
+</section>
 </main>
 
 </body>
