--- a/ClientApp/src/app/inicio/inicio.component.css
+++ b/ClientApp/src/app/inicio/inicio.component.css
@@ -48,61 +48,86 @@ body {
 }
 
 .services-container {
-    width: 950px;
-    height: 300px;
-    flex-shrink: 0;
-    position: relative;
-    top: -50px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 7px;
-    z-index:3;
-
+  width: 950px;
+  height: 300px;
+  flex-shrink: 0;
+  position: relative;
+  top: -50px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 7px;
+  z-index: 3;
 }
 
 .services {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .service {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 main {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 article h4 {
-    color: #000;
-    font-size: 1.4rem;
-    font-weight: 700;
-}
-
+  color: #000;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-align: center;
+  }
 
 article img {
-    display: flex;
-    width: 280px;
-    padding: 10px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 2px;
-    border-radius: 10px;
-    transition: transform 0.3s ease, filter 0.3s ease;
-
+  display: flex;
+  width: 280px;
+  padding: 10px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 2px;
+  border-radius: 10px;
+  transition: transform 0.3s ease, filter 0.3s ease;
 }
+
 .service img:hover {
-    transform: scale(1.05);
+  transform: scale(1.05);
 }
 
 h3 {
-    margin: 10px 0px 10px 0px;
-    color: #000;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
+  margin: 10px 0px 10px 0px;
+  color: #000;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.service-image {
+  width: 200px;
+  height: 200px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra leve */
+  transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.service-image:hover {
+  transform: scale(1.05);
+}
+
+.service.habitaciones .service-image {
+  background-image: url('../../assets/images/habitaciones.png');
+}
+
+.service.camas .service-image {
+  background-image: url('../../assets/images/camas.png');
+}
+
+.service.pacientes .service-image {
+  background-image: url('../../assets/images/pacientes.png');
 }
