--- a/ClientApp/src/app/navbar/navbar.component.html
+++ b/ClientApp/src/app/navbar/navbar.component.html
@@ -11,9 +11,7 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
-            <img src="assets/images/logo.png" alt="Logo Goldenfold">
-        </a>
+      <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
