--- a/ClientApp/src/app/footer/footer.component.css
+++ b/ClientApp/src/app/footer/footer.component.css
@@ -89,14 +89,14 @@ div {
   padding: 0px;
 }
 .footer-section {
-  padding: 20px; /* Ajusta el espacio interno si es necesario */
+  padding: 20px; 
 }
 
 .map {
-  width: 50px; /* Ajusta el tamaño según sea necesario */
-  height: 180px; /* Ajusta la altura según sea necesario */
-  background-image: url('../../assets/images/mapa.png'); /* Ajusta la ruta según tu estructura */
-  background-size: cover; /* Ajusta el tamaño de la imagen de fondo */
-  background-position: center; /* Centra la imagen */
-  background-repeat: no-repeat; /* No repite la imagen */
+  width: 50px;
+  height: 180px;
+  background-image: url('../../assets/images/mapa.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
