nombres bd en procceso

--- a/ClientApp/src/app/administrador-sistema/administrador-sistema-dashboard/administrador-sistema-dashboard.component.css
+++ b/ClientApp/src/app/administrador-sistema/administrador-sistema-dashboard/administrador-sistema-dashboard.component.css
@@ -148,6 +148,7 @@ justify-content: center;
   padding: 14px 20px;
   text-decoration: none;
   transition: background-color 0.3s ease, color 0.3s ease;
+  border-radius: 10px;
 }
 
 /* Efecto hover para los enlaces de navegación */
