--- a/ClientApp/src/app/administrativo/administrativo-dashboard/administrativo-dashboard.component.html
+++ b/ClientApp/src/app/administrativo/administrativo-dashboard/administrativo-dashboard.component.html
@@ -9,7 +9,7 @@
     </div>
   </header>
 
- <nav class="navbar">
+ <!-- <nav class="navbar">
     <ul>
       <li><a routerLink="pacientes" class="nav-link">Pacientes</a></li>
       <li><a routerLink="altas" class="nav-link">Altas</a></li>
@@ -19,7 +19,7 @@
         >
       </li>
     </ul>
-  </nav>
+  </nav> -->
 
   <div class="content">
     <div class="register-section">
