--- a/ClientApp/src/app/footer/footer.component.css
+++ b/ClientApp/src/app/footer/footer.component.css
@@ -8,23 +8,30 @@
 
 .footer-content {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+
 }
 
 .footer-section {
   flex: 1;
   min-width: 200px;
+  padding: 20px;
 }
 
-.footer-section h3 {
-  margin-bottom: 15px;
+.footer-section h3, .footer-section h5 {
+  margin: 5px 0 15px;
+  font-size: 0.7rem;
 }
 
-.footer-section p, .footer-section ul, .footer-section a {
+.footer-section p,
+.footer-section ul,
+.footer-section a {
   text-decoration: none;
   line-height: 1.6;
+  margin: 0;
+  font-size: 0.7rem;
 }
 
 .footer-section ul {
@@ -36,67 +43,40 @@
   font-size: 0.7rem;
 }
 
-.footer-brand img {
-  display: flex;
-  justify-content: end;
-  align-items: center;
+.footer-brand {
+  text-align: center;
   width: 150px;
-  margin-left: 16px;
-}
-
-.map img {
-  width: 150px;
-  height: 100px;
-  flex-shrink: 0;
-  border-radius: 10px;
-}
-
-.map {
-  display: flex;
-  justify-content: flex-start;
+  height: 150px;
+  background-image: url('../../assets/images/logo2.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-left: 40px ;
 }
 
 .links ul {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
-  margin: 0px;
-  font-size: 0.7rem;
+  align-items: flex-start;
+  margin-left: 90px;
   font-weight: bold;
-}
-
-p {
-  margin: 0px;
 }
 
 address {
   display: flex;
   flex-direction: column;
   text-align: start;
-  font-size: 0.7rem;
   padding: 10px;
-  margin: 0px;
-}
-
-address h5 {
-  font-size: 0.7rem;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-div {
-  padding: 0px;
-}
-.footer-section {
-  padding: 20px; 
 }
 
 .map {
-  width: 50px;
-  height: 180px;
+  width: 75px;
+  height: 150px;
+  margin: 40px ;
   background-image: url('../../assets/images/mapa.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  border-radius: 7px;
 }
