--- a/ClientApp/src/app/controlador-camas/controlador-camas-dashboard/controlador-camas-dashboard.component.css
+++ b/ClientApp/src/app/controlador-camas/controlador-camas-dashboard/controlador-camas-dashboard.component.css
@@ -1,9 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
 
 .header {
   background-color: #0078d4;
@@ -38,6 +32,8 @@ body {
 .navbar {
   padding: 10px 20px;
   background-color: #e2e2e2;
+  display: flex;
+  justify-content: space-between;
 }
 
 .search-bar {
@@ -82,7 +78,7 @@ th {
   color: white;
 }
 
-button {
+.assign-bed-btn {
   background-color: #5bc0de;
   border: none;
   color: white;
