--- a/ClientApp/src/app/controlador-camas/controlador-camas-dashboard/controlador-camas-dashboard.component.html
+++ b/ClientApp/src/app/controlador-camas/controlador-camas-dashboard/controlador-camas-dashboard.component.html
@@ -25,7 +25,7 @@
             <td>{{ request.patientName }}</td>
             <td>{{ request.requestedBedType }}</td>
             <td>
-              <button (click)="toggleAssignSection(request)">Asignar Cama</button>
+              <button class="assign-bed-btn" (click)="toggleAssignSection(request)">Asignar Cama</button>
             </td>
           </tr>
         </tbody>
