todo funcional, pre sprint

--- a/ClientApp/src/app/administrador-sistema/administrador-sistema-dashboard/administrador-sistema-dashboard.component.html
+++ b/ClientApp/src/app/administrador-sistema/administrador-sistema-dashboard/administrador-sistema-dashboard.component.html
@@ -14,7 +14,7 @@
       <li><a routerLink="pacientes" class="nav-link">Pacientes</a></li>
       <li><a routerLink="altas" class="nav-link">Altas</a></li>
       <li><a routerLink="asignaciones" class="nav-link">Asignaciones</a>
-      <li><a routerLink="usuarios" class="nav-link">Pacientes</a></li>
+      <li><a routerLink="usuarios" class="nav-link">Usuarios</a></li>
       <li><a routerLink="roles" class="nav-link">Roles</a></li>
       <li><a routerLink="habitaciones" class="nav-link">Habitaciones</a>
       <li><a routerLink="camas" class="nav-link">Camas</a>
