--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -1,46 +1,69 @@
 <div class="usuarios-section">
-    <h2>Usuarios</h2>
-    <div class="table-container">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID Usuario</th>
-            <th>Nombre</th>
-            <th>Nombre de Usuario</th>
-            <th>Contraseña</th>
-            <th>ID Rol</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let usuario of usuarios">
-            <td>{{ usuario.IdUsuario }}</td>
-            <td>{{ usuario.Nombre }}</td>
-            <td>{{ usuario.NombreUsuario }}</td>
-            <td>{{ usuario.Contrasenya }}</td>
-            <td>{{ usuario.IdRol }}</td>
-            <td>
-              <button (click)="borrarUsuario(usuario.IdUsuario)">Borrar</button>
-              <button (click)="actualizarUsuario(usuario)">Actualizar</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  
-    <div class="form-container">
-      <h3>Agregar Usuario</h3>
-      <form (ngSubmit)="agregarUsuario()">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" [(ngModel)]="nuevoUsuario.Nombre" name="nombre">
-        <label for="nombreUsuario">Nombre de Usuario:</label>
-        <input type="text" id="nombreUsuario" [(ngModel)]="nuevoUsuario.NombreUsuario" name="nombreUsuario">
-        <label for="contrasenya">Contraseña:</label>
-        <input type="password" id="contrasenya" [(ngModel)]="nuevoUsuario.Contrasenya" name="contrasenya">
-        <label for="idRol">ID Rol:</label>
-        <input type="number" id="idRol" [(ngModel)]="nuevoUsuario.IdRol" name="idRol">
-        <button type="submit">Agregar</button>
-      </form>
-    </div>
+  <h2>Usuarios</h2>
+  <div class="table-container">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ID Usuario</th>
+          <th>Nombre</th>
+          <th>Nombre Usuario</th>
+          <th>Contraseña</th>
+          <th>ID Rol</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let usuario of usuarios">
+          <td>{{ usuario.idUsuario }}</td>
+          <td>{{ usuario.nombre }}</td>
+          <td>{{ usuario.nombreUsuario }}</td>
+          <td>
+            <span [ngClass]="{ 'hidden-text': !mostrarContrasenas[usuario.idUsuario] }">
+              {{ usuario.contrasenya }}
+            </span>
+            <button class="password" (mousedown)="mostrarContrasena(usuario.idUsuario)" (mouseup)="ocultarContrasena(usuario.idUsuario)" (mouseleave)="ocultarContrasena(usuario.idUsuario)">
+              👁️
+            </button>
+          </td>
+          <td>{{ usuario.idRol }}</td>
+          <td>
+            <button (click)="toggleActualizarUsuario(usuario)">Actualizar</button>
+            <button (click)="borrarUsuario(usuario.idUsuario)">Borrar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  
+
+  <div class="form-container" *ngIf="usuarioParaActualizar">
+    <h3>Actualizar Usuario</h3>
+    <form (ngSubmit)="actualizarUsuario()">
+      <label for="idUsuario">ID Usuario:</label>
+      <input type="number" id="idUsuario" [(ngModel)]="usuarioParaActualizar.idUsuario" name="idUsuario" disabled>
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" [(ngModel)]="usuarioParaActualizar.nombre" name="nombre">
+      <label for="nombreUsuario">Nombre Usuario:</label>
+      <input type="text" id="nombreUsuario" [(ngModel)]="usuarioParaActualizar.nombreUsuario" name="nombreUsuario">
+      <label for="contrasenya">Contraseña:</label>
+      <input type="password" id="contrasenya" [(ngModel)]="usuarioParaActualizar.contrasenya" name="contrasenya">
+      <label for="idRol">ID Rol:</label>
+      <input type="number" id="idRol" [(ngModel)]="usuarioParaActualizar.idRol" name="idRol">
+      <button type="submit">Guardar</button>
+    </form>
+  </div>
+
+  <div class="form-container">
+    <h3>Agregar Usuario</h3>
+    <form (ngSubmit)="agregarUsuario()">
+      <label for="nombre">Nombre:</label>
+      <input type="text" id="nombre" [(ngModel)]="nuevoUsuario.nombre" name="nombre">
+      <label for="nombreUsuario">Nombre Usuario:</label>
+      <input type="text" id="nombreUsuario" [(ngModel)]="nuevoUsuario.nombreUsuario" name="nombreUsuario">
+      <label for="contrasenya">Contraseña:</label>
+      <input type="password" id="contrasenya" [(ngModel)]="nuevoUsuario.contrasenya" name="contrasenya">
+      <label for="idRol">ID Rol:</label>
+      <input type="number" id="idRol" [(ngModel)]="nuevoUsuario.idRol" name="idRol">
+      <button type="submit">Agregar</button>
+    </form>
+  </div>
+</div>
