--- a/ClientApp/src/app/shared/historial-altas/historial-altas.component.html
+++ b/ClientApp/src/app/shared/historial-altas/historial-altas.component.html
@@ -14,30 +14,48 @@
       </thead>
       <tbody>
         <tr *ngFor="let historialAlta of historialAltas">
-          <td>{{ historialAlta.IdHistorial }}</td>
-          <td>{{ historialAlta.IdPaciente }}</td>
-          <td>{{ historialAlta.FechaAlta | date: 'shortDate' }}</td>
-          <td>{{ historialAlta.Diagnostico }}</td>
-          <td>{{ historialAlta.Tratamiento }}</td>
+          <td>{{ historialAlta.idHistorial }}</td>
+          <td>{{ historialAlta.idPaciente }}</td>
+          <td>{{ historialAlta.fechaAlta | date: 'shortDate' }}</td>
+          <td>{{ historialAlta.diagnostico }}</td>
+          <td>{{ historialAlta.tratamiento }}</td>
           <td>
-            <button (click)="borrarHistorialAlta(historialAlta.IdHistorial)">Borrar</button>
+            <button (click)="toggleActualizarHistorialAlta(historialAlta)">Actualizar</button>
+            <button (click)="borrarHistorialAlta(historialAlta.idHistorial)">Borrar</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 
+  <div class="form-container" *ngIf="historialAltaParaActualizar">
+    <h3>Actualizar Historial de Alta</h3>
+    <form (ngSubmit)="actualizarHistorialAlta()">
+      <label for="idHistorial">ID Historial:</label>
+      <input type="number" id="idHistorial" [(ngModel)]="historialAltaParaActualizar.idHistorial" name="idHistorial" disabled>
+      <label for="idPaciente">ID Paciente:</label>
+      <input type="number" id="idPaciente" [(ngModel)]="historialAltaParaActualizar.idPaciente" name="idPaciente">
+      <label for="fechaAlta">Fecha de Alta:</label>
+      <input type="date" id="fechaAlta" [(ngModel)]="historialAltaParaActualizar.fechaAlta" name="fechaAlta">
+      <label for="diagnostico">Diagnóstico:</label>
+      <input type="text" id="diagnostico" [(ngModel)]="historialAltaParaActualizar.diagnostico" name="diagnostico">
+      <label for="tratamiento">Tratamiento:</label>
+      <input type="text" id="tratamiento" [(ngModel)]="historialAltaParaActualizar.tratamiento" name="tratamiento">
+      <button type="submit">Guardar</button>
+    </form>
+  </div>
+
   <div class="form-container">
     <h3>Agregar Historial de Alta</h3>
     <form (ngSubmit)="agregarHistorialAlta()">
       <label for="idPaciente">ID Paciente:</label>
-      <input type="number" id="idPaciente" [(ngModel)]="nuevoHistorialAlta.IdPaciente" name="idPaciente">
+      <input type="number" id="idPaciente" [(ngModel)]="nuevoHistorialAlta.idPaciente" name="idPaciente">
       <label for="fechaAlta">Fecha de Alta:</label>
-      <input type="date" id="fechaAlta" [(ngModel)]="nuevoHistorialAlta.FechaAlta" name="fechaAlta">
+      <input type="date" id="fechaAlta" [(ngModel)]="nuevoHistorialAlta.fechaAlta" name="fechaAlta">
       <label for="diagnostico">Diagnóstico:</label>
-      <input type="text" id="diagnostico" [(ngModel)]="nuevoHistorialAlta.Diagnostico" name="diagnostico">
+      <input type="text" id="diagnostico" [(ngModel)]="nuevoHistorialAlta.diagnostico" name="diagnostico">
       <label for="tratamiento">Tratamiento:</label>
-      <input type="text" id="tratamiento" [(ngModel)]="nuevoHistorialAlta.Tratamiento" name="tratamiento">
+      <input type="text" id="tratamiento" [(ngModel)]="nuevoHistorialAlta.tratamiento" name="tratamiento">
       <button type="submit">Agregar</button>
     </form>
   </div>
