--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -1,34 +1,44 @@
 <div class="roles-section">
-    <h2>Roles</h2>
-    <div class="table-container">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ID Rol</th>
-            <th>Nombre Rol</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let rol of roles">
-            <td>{{ rol.IdRol }}</td>
-            <td>{{ rol.NombreRol }}</td>
-            <td>
-              <button (click)="borrarRol(rol.IdRol)">Borrar</button>
-              <button (click)="actualizarRol(rol)">Actualizar</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  
-    <div class="form-container">
-      <h3>Agregar Rol</h3>
-      <form (ngSubmit)="agregarRol()">
-        <label for="nombreRol">Nombre Rol:</label>
-        <input type="text" id="nombreRol" [(ngModel)]="nuevoRol.NombreRol" name="nombreRol">
-        <button type="submit">Agregar</button>
-      </form>
-    </div>
+  <h2>Roles</h2>
+  <div class="table-container">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>ID Rol</th>
+          <th>Nombre Rol</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let rol of roles">
+          <td>{{ rol.idRol }}</td>
+          <td>{{ rol.nombreRol }}</td>
+          <td>
+            <button (click)="toggleActualizarRol(rol)">Actualizar</button>
+            <button (click)="borrarRol(rol.idRol)">Borrar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-  
+
+  <div class="form-container" *ngIf="rolParaActualizar">
+    <h3>Actualizar Rol</h3>
+    <form (ngSubmit)="actualizarRol()">
+      <label for="idRol">ID Rol:</label>
+      <input type="number" id="idRol" [(ngModel)]="rolParaActualizar.idRol" name="idRol" disabled>
+      <label for="nombreRol">Nombre Rol:</label>
+      <input type="text" id="nombreRol" [(ngModel)]="rolParaActualizar.nombreRol" name="nombreRol">
+      <button type="submit">Guardar</button>
+    </form>
+  </div>
+
+  <div class="form-container">
+    <h3>Agregar Rol</h3>
+    <form (ngSubmit)="agregarRol()">
+      <label for="nombreRol">Nombre Rol:</label>
+      <input type="text" id="nombreRol" [(ngModel)]="nuevoRol.nombreRol" name="nombreRol">
+      <button type="submit">Agregar</button>
+    </form>
+  </div>
+</div>
