--- a/ClientApp/src/app/shared/usuarios/usuarios.component.css
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.css
@@ -79,3 +79,17 @@
     background-color: #0056a3;
   }
   
+  .hidden-text {
+    -webkit-text-security: disc;
+    width: 4px;
+    height: 4px;
+    margin: 10px;
+  }
+  .password {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    margin: 0;
+  }
