--- a/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
+++ b/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
@@ -4,22 +4,36 @@
     <table class="table">
       <thead>
         <tr>
-          <th>ID Habitación</th>
           <th>Edificio</th>
           <th>Planta</th>
-          <th>Número Habitación</th>
+          <th>Número de Habitación</th>
           <th>Acciones</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let habitacion of habitaciones">
-          <td>{{ habitacion.IdHabitacion }}</td>
-          <td>{{ habitacion.Edificio }}</td>
-          <td>{{ habitacion.Planta }}</td>
-          <td>{{ habitacion.NumeroHabitacion }}</td>
+          <td>{{ habitacion.edificio }}</td>
+          <td>{{ habitacion.planta }}</td>
+          <td>{{ habitacion.numeroHabitacion }}</td>
           <td>
-            <button (click)="borrarHabitacion(habitacion.IdHabitacion)">Borrar</button>
-            <button (click)="actualizarHabitacion(habitacion)">Actualizar</button>
+            <button (click)="toggleActualizarHabitacion(habitacion)">Actualizar</button>
+            <button (click)="borrarHabitacion(habitacion.idHabitacion)">Borrar</button>
+          </td>
+        </tr>
+        <tr *ngIf="habitacionParaActualizar">
+          <td colspan="4">
+            <div class="form-container">
+              <h3>Actualizar Habitación</h3>
+              <form (ngSubmit)="actualizarHabitacion()">
+                <label for="edificio">Edificio:</label>
+                <input type="text" id="edificio" [(ngModel)]="habitacionParaActualizar.edificio" name="edificio">
+                <label for="planta">Planta:</label>
+                <input type="text" id="planta" [(ngModel)]="habitacionParaActualizar.planta" name="planta">
+                <label for="numeroHabitacion">Número de Habitación:</label>
+                <input type="text" id="numeroHabitacion" [(ngModel)]="habitacionParaActualizar.numeroHabitacion" name="numeroHabitacion">
+                <button type="submit">Guardar</button>
+              </form>
+            </div>
           </td>
         </tr>
       </tbody>
@@ -30,11 +44,11 @@
     <h3>Agregar Habitación</h3>
     <form (ngSubmit)="agregarHabitacion()">
       <label for="edificio">Edificio:</label>
-      <input type="text" id="edificio" [(ngModel)]="nuevaHabitacion.Edificio" name="edificio">
+      <input type="text" id="edificio" [(ngModel)]="nuevaHabitacion.edificio" name="edificio">
       <label for="planta">Planta:</label>
-      <input type="text" id="planta" [(ngModel)]="nuevaHabitacion.Planta" name="planta">
-      <label for="numeroHabitacion">Número Habitación:</label>
-      <input type="text" id="numeroHabitacion" [(ngModel)]="nuevaHabitacion.NumeroHabitacion" name="numeroHabitacion">
+      <input type="text" id="planta" [(ngModel)]="nuevaHabitacion.planta" name="planta">
+      <label for="numeroHabitacion">Número de Habitación:</label>
+      <input type="text" id="numeroHabitacion" [(ngModel)]="nuevaHabitacion.numeroHabitacion" name="numeroHabitacion">
       <button type="submit">Agregar</button>
     </form>
   </div>
