--- a/ClientApp/src/app/shared/pacientes/pacientes.component.css
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.css
@@ -2,14 +2,15 @@
   margin: 20px;
 }
 
-/* Contenedor para la tabla */
 .table-container, .form-container {
   background-color: rgb(228, 224, 224);
   padding: 20px;
-  margin: 20px;
+  margin: 20px 0;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
-  margin-bottom: 20px;
+  width: 100%;
+  box-sizing: border-box;
+  overflow-x: auto;
 }
 
 .table {
@@ -24,14 +25,25 @@
 }
 
 th, td {
-  padding: 10px;
+  padding: 8px;
   text-align: left;
+  font-size: 14px;
   border-radius: 5px;
 }
 
 th {
   background-color: #0078d4;
   color: white;
+}
+
+th:nth-child(1), td:nth-child(1) {
+  width: 10%;
+}
+th:nth-child(2), td:nth-child(2) {
+  width: 20%;
+}
+th:nth-child(3), td:nth-child(3) {
+  width: 30%;
 }
 
 button {
@@ -78,3 +90,95 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background-color: #0056a3;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  gap: 10px;
+}
+
+.pagination button {
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  background-color: #0078d4;
+  color: white;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.pagination button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.pagination span {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+/* Contenedor para el filtro */
+.filter-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  max-width: 800px; /* Ancho máximo del contenedor alargado */
+  width: 100%; /* Ancho máximo del contenedor */
+  border: 1px solid #ddd;
+}
+
+.filter-container input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  background-color: #fff;
+  width: 100%;
+  box-sizing: border-box;
+  transition: border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.filter-container input:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 2px 6px rgba(0, 123, 255, 0.2);
+}
+
+.filter-container input::placeholder {
+  color: #888;
+  font-style: italic;
+}
+
+@media (max-width: 768px) {
+  .filter-container {
+    padding: 8px;
+    max-width: 100%;
+  }
+
+  .filter-container input {
+    font-size: 12px;
+    padding: 8px;
+  }}
